force-app/main/default/objects/Product_Variant_Master__c/Product_Variant_Master__c.object-meta.xml
<CustomObject>
    <label>Product Variant Master</label>
    <pluralLabel>Product Variant Masters</pluralLabel>
    <nameField>
        <displayFormat>PVM-{000000}</displayFormat>
        <label>Variant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>