force-app/main/default/objects/Product_Variant_Master__c/fields/Config_Opt_10__c.field-meta.xml
<CustomField>
    <fullName>Config_Opt_10__c</fullName>
    <label>Config Opt 10</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indian Plug</fullName>
                <default>true</default>
                <label>Indian Plug</label>
            </value>
            <value>
                <fullName>Universal Plug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>