force-app/main/default/objects/Product_Variant_Master__c/fields/Config_Opt_2__c.field-meta.xml
<CustomField>
    <fullName>Config_Opt_2__c</fullName>
    <label>Config Opt 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            
        </valueSetDefinition>
    </valueSet>
</CustomField>