force-app/main/default/objects/Product_Variant_Master__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Variant Masters</relationshipLabel>
    <relationshipName>Product_Variant_Masters_Product</relationshipName>
    <type>Lookup</type>
</CustomField>