force-app/main/default/objects/Product_Variant_Master__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFARRIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFARRUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFARQIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFARQUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFALRIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFALRUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFALQIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFALQUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFAERIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFAERUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFAEQIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : NNFFFNFAEQUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFARRIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFARRUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFARQIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFARQUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFALRIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFALRUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFALQIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFALQUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFAERIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFAERUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFAEQIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : DNFFFNFAEQUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : HNFFFNFARRIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : HNFFFNFARRUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : HNFFFNFARQIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : HNFFFNFARQUN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : HNFFFNFALRIN)</fullName>
            </value>
            <value>
                <fullName>CRM 100 (Order Code : HNFFFNFALRUN)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>