force-app/main/default/objects/Product_Variant_Master__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>