force-app/main/default/objects/Product_Variant_Master__c/fields/RSP__c.field-meta.xml
<CustomField>
    <fullName>RSP__c</fullName>
    <label>RSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>